--- a/generators/generator-mm-component/package.json
+++ b/generators/generator-mm-component/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-material-motion-file",
+  "name": "generator-mm-file",
   "version": "1.0.0",
-  "description": "Yeoman generator for a Material Motion file.",
+  "description": "Yeoman generator for a Material Motion component.",
   "files": [
     "app"
   ],
