--- a/generators/generator-mm-component/package.json
+++ b/generators/generator-mm-component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-mm-file",
+  "name": "generator-mm-component",
   "version": "1.0.0",
   "description": "Yeoman generator for a Material Motion component.",
   "files": [
