Clean up the component yeoman generator.
Tags: #material_motion

Differential Revision: http://codereview.cc/D1006

--- a/generators/generator-mm-component/package.json
+++ b/generators/generator-mm-component/package.json
@@ -14,6 +14,7 @@
   "author": "Google Inc.",
   "license": "Apache 2.0",
   "dependencies": {
+    "file": "^0.2.2",
     "yeoman-generator": "^0.23.3"
   }
 }
