--- a/generators/generator-mm-github/package.json
+++ b/generators/generator-mm-github/package.json
@@ -14,6 +14,7 @@
   "author": "Google Inc.",
   "license": "Apache 2.0",
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "titlecase": "^1.1.2",
     "yeoman-generator": "^0.23.3"
   }
