--- a/generators/generator-mm-file/package.json
+++ b/generators/generator-mm-file/package.json
@@ -14,6 +14,7 @@
   "author": "Google Inc.",
   "license": "Apache 2.0",
   "dependencies": {
+    "lodash": "^4.13.1",
     "yeoman-generator": "^0.23.3"
   }
 }
