Add arc-hook-conphig to repo.
Summary: Enables hooks required for https://github.com/material-motion/material-motion-team/issues/26.

Reviewers: O2 Material Motion!

Differential Revision: http://codereview.cc/D1120

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,7 +1,9 @@
 {
   "load": [
-    "third_party/arc-proselint"
+    "third_party/arc-proselint",
+    "third_party/arc-hook-conphig"
   ],
+  "arcanist_configuration" : "HookConphig",
   "phabricator.uri" : "http://codereview.cc/",
   "arc.land.onto.default" : "develop",
   "arc.feature.start.default": "origin/develop",
