Add arc-hook-github-issues post-diff hook.
Summary: Closes https://github.com/material-motion/material-motion-team/issues/26.

Reviewers: O2 Material Motion!

Differential Revision: http://codereview.cc/D1122

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "third_party/arc-hook-conphig"]
 	path = third_party/arc-hook-conphig
 	url = https://github.com/material-foundation/arc-hook-conphig.git
+[submodule ".arc-hooks/post-diff/arc-hook-github-issues"]
+	path = .arc-hooks/post-diff/arc-hook-github-issues
+	url = https://github.com/material-foundation/arc-hook-github-issues.git
