--- a/.arcconfig
+++ b/.arcconfig
@@ -1,7 +1,8 @@
 {
   "load": [
     "third_party/arc-proselint",
-    "third_party/arc-hook-conphig"
+    "third_party/arc-hook-conphig",
+    ".arc-hooks/post-diff/arc-hook-github-issues"
   ],
   "arcanist_configuration" : "HookConphig",
   "phabricator.uri" : "http://codereview.cc/",
