--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/google/arc-proselint.git
 [submodule "third_party/gh"]
 	path = third_party/gh
-	url = git@github.com:material-motion/gh.git
+	url = https://github.com/material-foundation/gh.git
 [submodule "third_party/arc-hook-conphig"]
 	path = third_party/arc-hook-conphig
 	url = https://github.com/material-foundation/arc-hook-conphig.git
