--- a/generators/generator-mm-github/app/templates/objc/.travis.yml
+++ b/generators/generator-mm-github/app/templates/objc/.travis.yml
@@ -22,5 +22,5 @@ before_install:
   - pod install
 script:
   - set -o pipefail
-  - xcodebuild -workspace Catalog.xcworkspace -scheme Catalog -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
-  - xcodebuild -workspace Catalog.xcworkspace -scheme UnitTests -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
+  - xcodebuild -workspace MaterialMotion<%= componentName %>.xcworkspace -scheme Catalog -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
+  - xcodebuild -workspace MaterialMotion<%= componentName %>.xcworkspace -scheme UnitTests -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
