--- a/generators/generator-mm-github/package.json
+++ b/generators/generator-mm-github/package.json
@@ -15,6 +15,7 @@
   "license": "Apache 2.0",
   "dependencies": {
     "async": "^2.0.0",
+    "file": "^0.2.2",
     "titlecase": "^1.1.2",
     "yeoman-generator": "^0.23.3"
   }
