--- a/generators/generator-mm-github/app/templates/objc/Podfile
+++ b/generators/generator-mm-github/app/templates/objc/Podfile
@@ -11,4 +11,12 @@ abstract_target 'MaterialMotion<%= componentName %>' do
   target "UnitTests" do
     project 'examples/apps/Catalog/Catalog.xcodeproj'
   end
+
+  post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |configuration|
+        configuration.build_settings['SWIFT_VERSION'] = "3.0"
+      end
+    end
+  end
 end
