--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".arc-hooks/post-diff/arc-hook-github-issues"]
 	path = .arc-hooks/post-diff/arc-hook-github-issues
 	url = https://github.com/material-foundation/arc-hook-github-issues.git
+[submodule "third_party/apidiff"]
+	path = third_party/apidiff
+	url = https://github.com/material-motion/material-motion-apidiff.git
