--- a/generators/generator-mm-github/app/templates/basic/.arcconfig
+++ b/generators/generator-mm-github/app/templates/basic/.arcconfig
@@ -1,8 +1,8 @@
 {
   "load": [
-    "third_party/arc-proselint",
-    "third_party/arc-hook-conphig",
-    ".arc-hooks/post-diff/arc-hook-github-issues"
+    "material-arc-tools/third_party/arc-proselint",
+    "material-arc-tools/third_party/arc-hook-conphig",
+    "material-arc-tools/third_party/arc-hook-github-issues"
   ],
   "arcanist_configuration" : "HookConphig",
   "phabricator.uri" : "http://codereview.cc/",
