--- a/generators/generator-mm-github/app/templates/objc/.arcconfig
+++ b/generators/generator-mm-github/app/templates/objc/.arcconfig
@@ -1,11 +1,11 @@
 {
   "load": [
-    "third_party/clang-format-linter",
-    "third_party/arc-proselint",
-    "third_party/arc-hook-conphig",
-    "third_party/arc-jazzy-linter",
-    "third_party/arc-xcode-test-engine",
-    ".arc-hooks/post-diff/arc-hook-github-issues"
+    "material-arc-tools/third_party/clang-format-linter",
+    "material-arc-tools/third_party/arc-proselint",
+    "material-arc-tools/third_party/arc-hook-conphig",
+    "material-arc-tools/third_party/arc-jazzy-linter",
+    "material-arc-tools/third_party/arc-xcode-test-engine",
+    "material-arc-tools/third_party/arc-hook-github-issues"
   ],
   "arcanist_configuration" : "HookConphig",
   "phabricator.uri" : "http://codereview.cc/",
