Preliminary exploration of lsc command.
Summary:
Planned work:

- Log completion of phases on a per-repo basis. Can likely just create a simple status number for each repo.

Closes https://github.com/material-motion/material-motion-team/issues/31.

Reviewers: markwei, O2 Material Motion

Reviewed By: markwei, O2 Material Motion

Subscribers: markwei

Tags: #material_motion

Differential Revision: http://codereview.cc/D1214

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+lsc/*/repos/
+lsc/*/logs/
+
 # Node rules:
 ## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
