--- a/generators/generator-mm-github/app/templates/swift/Podfile
+++ b/generators/generator-mm-github/app/templates/swift/Podfile
@@ -17,7 +17,7 @@ abstract_target 'MaterialMotion<%= componentName %>' do
       target.build_configurations.each do |configuration|
         configuration.build_settings['SWIFT_VERSION'] = "3.0"
         if target.name.start_with?("Material")
-          configuration.build_settings['WARNING_CFLAGS'] ="$(inherited) -Wall -Wcast-align -Wconversion -Werror -Wextra -Wimplicit-atomic-properties -Wmissing-prototypes -Wno-error=deprecated -Wno-error=deprecated-implementations -Wno-sign-conversion -Wno-unused-parameter -Woverlength-strings -Wshadow -Wstrict-selector-match -Wundeclared-selector -Wunreachable-code"
+          configuration.build_settings['WARNING_CFLAGS'] ="$(inherited) -Wall -Wcast-align -Wconversion -Werror -Wextra -Wimplicit-atomic-properties -Wmissing-prototypes -Wno-sign-conversion -Wno-unused-parameter -Woverlength-strings -Wshadow -Wstrict-selector-match -Wundeclared-selector -Wunreachable-code"
         end
       end
     end
