Add CatalogByConvention to Swift catalog template.
Reviewers: O4 Material Motion Apple platform reviewers, O2 Material Motion, markwei

Reviewed By: O4 Material Motion Apple platform reviewers, O2 Material Motion, markwei

Tags: #material_motion

Differential Revision: http://codereview.cc/D1885

--- a/generators/generator-mm-github/app/templates/swift/Podfile
+++ b/generators/generator-mm-github/app/templates/swift/Podfile
@@ -1,4 +1,6 @@
 abstract_target 'MaterialMotion<%= componentName %>' do
+  pod 'CatalogByConvention'
+
   pod 'MaterialMotion<%= componentName %>', :path => './'
 
   workspace 'MaterialMotion<%= componentName %>.xcworkspace'
