Extract version number from existing files.
Reviewers: O2 Material Motion, markwei, O3 Material Motion JavaScript platform reviewers, appsforartists

Reviewed By: O2 Material Motion, markwei, O3 Material Motion JavaScript platform reviewers, appsforartists

Subscribers: markwei

Tags: #material_motion

Differential Revision: http://codereview.cc/D2048

--- a/generators/generator-mm-github/app/templates/objc/.jazzy.yaml
+++ b/generators/generator-mm-github/app/templates/objc/.jazzy.yaml
@@ -1,7 +1,7 @@
 module: MaterialMotion<%= componentName %>
-module_version: 1.0.0
+module_version: <%= version %>
 umbrella_header: src/MaterialMotion<%= componentName %>.h
 objc: true
 sdk: iphonesimulator
 github_url: https://github.com/<%= repoOwner %>/<%= repoName %>
-github_file_prefix: https://github.com/<%= repoOwner %>/<%= repoName %>/tree/v1.0.0
+github_file_prefix: https://github.com/<%= repoOwner %>/<%= repoName %>/tree/v<%= version %>
