--- a/generators/generator-mm-github/app/templates/swift/Podfile
+++ b/generators/generator-mm-github/app/templates/swift/Podfile
@@ -1,26 +1,23 @@
-abstract_target 'MaterialMotion<%= componentName %>' do
+workspace 'MaterialMotion<%= componentName %>.xcworkspace'
+use_frameworks!
+
+target "Catalog" do
   pod 'CatalogByConvention'
+  pod 'MaterialMotion<%= componentName %>/examples', :path => './'
+  project 'examples/apps/Catalog/Catalog.xcodeproj'
+end
 
-  pod 'MaterialMotion<%= componentName %>', :path => './'
+target "UnitTests" do
+  project 'examples/apps/Catalog/Catalog.xcodeproj'
+  pod 'MaterialMotion<%= componentName %>/tests', :path => './'
+end
 
-  workspace 'MaterialMotion<%= componentName %>.xcworkspace'
-  use_frameworks!
-
-  target "Catalog" do
-    project 'examples/apps/Catalog/Catalog.xcodeproj'
-  end
-
-  target "UnitTests" do
-    project 'examples/apps/Catalog/Catalog.xcodeproj'
-  end
-
-  post_install do |installer|
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |configuration|
-        configuration.build_settings['SWIFT_VERSION'] = "3.0"
-        if target.name.start_with?("Material")
-          configuration.build_settings['WARNING_CFLAGS'] ="$(inherited) -Wall -Wcast-align -Wconversion -Werror -Wextra -Wimplicit-atomic-properties -Wmissing-prototypes -Wno-sign-conversion -Wno-unused-parameter -Woverlength-strings -Wshadow -Wstrict-selector-match -Wundeclared-selector -Wunreachable-code"
-        end
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |configuration|
+      configuration.build_settings['SWIFT_VERSION'] = "3.0"
+      if target.name.start_with?("Material")
+        configuration.build_settings['WARNING_CFLAGS'] ="$(inherited) -Wall -Wcast-align -Wconversion -Werror -Wextra -Wimplicit-atomic-properties -Wmissing-prototypes -Wno-sign-conversion -Wno-unused-parameter -Woverlength-strings -Wshadow -Wstrict-selector-match -Wundeclared-selector -Wunreachable-code"
       end
     end
   end
