[added] first draft of TypeScript package generator
Reviewers: O3 Material JavaScript platform reviewers, featherless, O2 Material Motion

Reviewed By: O3 Material JavaScript platform reviewers, featherless, O2 Material Motion

Subscribers: featherless

Tags: #material_motion

Differential Revision: http://codereview.cc/D2115

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 lsc/*/repos/
 lsc/*/logs/
 
+# Filesystem cruft
+.DS_Store
+npm-debug.log
+
+# Generated files
+*.pyc
+*.js.map
+
 # Node rules:
 ## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
