--- a/generators/generator-mm-package/app/templates/typescript/package.json
+++ b/generators/generator-mm-package/app/templates/typescript/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "types": "src/index.ts",
   "scripts": {
-    "test": "$(npm bin)/karma start",
+    "test": "$( yarn bin )/karma start",
     "clean": "rm -rf ./dist/*; mkdir -p ./dist/",
-    "build": "yarn run clean; node ./build.js"
+    "build": "yarn run clean; $( yarn bin )/tsc"
   },
   "dependencies": {
     "tslib": "^1.2.0"
@@ -22,8 +22,6 @@
     "karma-webpack": "1.8.0",
     "mocha": "3.1.1",
     "mocha-sugar-free": "1.3.1",
-    "pundle": "1.1.11",
-    "pundle-dev": "1.1.11",
     "sinon": "2.0.0-pre.3",
     "sinon-chai": "2.8.0",
     "ts-loader": "0.9.0",
