--- a/generators/generator-mm-package/app/templates/typescript/package.json
+++ b/generators/generator-mm-package/app/templates/typescript/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "types": "src/index.ts",
   "scripts": {
-    "test": "$( yarn bin )/karma start",
     "lint": "$( yarn bin )/tslint -c ../../tslint.json --project tsconfig.json",
+    "test": "node ../../tools/test.js --only <%= slug %>",
     "clean": "rm -rf ./dist/*; mkdir -p ./dist/",
     "build": "yarn run clean; $( yarn bin )/tsc"
   },
@@ -14,21 +14,8 @@
     "tslib": "^1.2.0"
   },
   "devDependencies": {
-    "chai": "3.5.0",
-    "karma": "1.3.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-firefox-launcher": "1.0.0",
-    "karma-mocha": "1.2.0",
-    "karma-safari-launcher": "1.0.0",
-    "karma-webpack": "1.8.0",
-    "mocha": "3.1.1",
-    "mocha-sugar-free": "1.3.1",
-    "sinon": "2.0.0-pre.3",
-    "sinon-chai": "2.8.0",
-    "ts-loader": "0.9.0",
     "tslint": "4.0.2",
-    "typescript": "2.1",
-    "webpack": "2.1.0-beta.25"
+    "typescript": "2.1"
   },
   "repository": {
     "type": "git",
