--- a/generators/generator-mm-package/app/templates/typescript/package.json
+++ b/generators/generator-mm-package/app/templates/typescript/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "<%= description %>",
   "main": "dist/index.js",
-  "types": "src/index.ts",
+  "types": "dist/index.d.ts",
+  "typescript:main": "src/index.ts",
   "scripts": {
     "lint": "$( yarn bin )/tslint -c ../../tslint.json --project tsconfig.json",
     "test": "node ../../tools/test.js --only <%= slug %>",
